<resources>
    <string name="app_name">My Application</string>
    <string name="School">School</string>
    <string name="Password">Password</string>
    <string name="UserName">UserName</string>
    <string name="Login">Login</string>
    <string name="Cancel">Cancel</string>
    <string name="Welcome">Welcome</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Type">type</string>
    <string name="Register">Register</string>
    <string name="type">type</string>
    <string name="logout">Log out</string>
    <string name="UserName2">username</string>
    <string name="Continue">Continue</string>
    <string name="Role">role</string>
    <string name="Back">Back</string>
    <string name="Cancel2">Cancel</string>
    <string name="confirm1">Confirm</string>
    <string name="cancel1">Cancel</string>
    <string name="SelectCourse">SelectCourse</string>
    <string name="edit_course">edit course</string>
    <string name="Courses">SelectCourse</string>
    <string name="Accounts">SelectAccount</string>
    <string name="InstructorHome">InstructorHome</string>
    <string name="Query">What would you like to do?</string>
    <string name="ViewCourses">View Courses</string>
    <string name="SearchCourse">Search Course</string>
    <string name="assign">Assign/unassign</string>
    <string name="Edit_course">Edit Course</string>
    <string name="Assign">Assign/Unassign</string>
    <string name="query">Please select a course</string>
    <string name="AssignSelf">Assign</string>
    <string name="Unassign">Unassign</string>
    <string name="query1">Please select a course you\'d like to assign/unassign yourself to</string>
    <string name="StudentHome">Student Home</string>
    <string name="enroll">Enroll/Unenroll</string>
    <string name="Select">Please select the course you\'d like to enroll</string>
    <string name="select">Please select a course you\'d like to enroll/unenroll</string>
    <string name="Enroll">Enroll</string>
    <string name="unenroll">Unenroll</string>
    <string-array name="userTypes">
        <item>student</item>
        <item>instructor</item>
    </string-array>
    <string-array name="daysOfTheWeek">
        <item>none</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
</resources>