<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructorAssignCourse">

    <TextView
        android:id="@+id/Title"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:text="@string/Assign"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/Query"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Query"
        android:layout_width="349dp"
        android:layout_height="58dp"
        android:layout_marginBottom="48dp"
        android:text="@string/query1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/SelectCourse"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Assign"
        android:layout_width="123dp"
        android:layout_height="56dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="120dp"
        android:text="@string/AssignSelf"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/Unassign"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Button
        android:id="@+id/Unassign"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="28dp"
        android:text="@string/Unassign"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Button
        android:id="@+id/back"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:text="@string/Back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Assign"
        app:layout_constraintVertical_bias="0.306" />
</androidx.constraintlayout.widget.ConstraintLayout>